--- a/projects.html
+++ b/projects.html
@@ -66,7 +66,8 @@
                             <hr class="hr_gray"><br />
                             <div>
                                 <ul>
-                                    <li>[Work in progress]</li>
+                                    <li>Computer vision projects</li>
+                                    <li>[Coming soon]</li>
                                 </ul>
                             </div>
                         </div>
@@ -90,9 +91,9 @@
                             <hr class="hr_gray"><br />
                             <div>
                                 <ul>
-                                    <li>Foodly</li>
+                                    <li>Foodly Website</li>
                                     <li>Easy Learn Website</li>
-                                    <li>Project 3</li>
+                                    <li>CodeAdrian Website</li>
                                     <li>Project 4</li>
                                 </ul>
                             </div>
@@ -106,24 +107,22 @@
                             <hr class="hr_gray"><br />
                             <div>
                                 <ul>
-                                    <li>FIR Filter</li>
                                     <li>Kernel-based Image Filter</li>
                                     <li>Robotics Projects</li>
-                                    <li>Project 4</li>
                                 </ul>
                             </div>
                         </div>
 
                         <div class="col-lg-4"><br />
-                            <h5 class="centered">Robotics Projects</h5>
+                            <h5 class="centered">Robotics Projects (Simulations)</h5>
                             <hr class="hr_gray"><br />
                             <div>
                                 <ul>
-                                    <li>Direct Kinematics</li>
-                                    <li>Inverse Kinematics</li>
+                                    <li>Direct Kinematics model</li>
+                                    <li>Inverse Kinematics model</li>
                                     <li>Trajectory Planning</li>
                                     <li>Robot Vision</li>
-                                    <li>Mobile Robot</li>
+                                    <li>Mobile Robot model</li>
                                 </ul>
                             </div>
                         </div>
@@ -330,6 +329,56 @@
                                                         <div class="col-lg-3"><a class="lightbox-a" title="Webshop"><img src="./projects/images/FoodlyWeb_02.gif" class="thumbnail img-responsive"></a></div>
                             <div class="col-lg-3"><a class="lightbox-a" title="Pizza Customization"><img src="./projects/images/FoodlyWeb_01.gif" class="thumbnail img-responsive"></a></div>
                         </div>
+                    </div>
+                </div>
+            </div>
+
+
+<div class="container-full container-blue">
+                <div class="row">
+                    <h2>Easy Learn Website</h2>
+                    <h5>Work in progress. Project for Microsoft's Imagine Cup 2015.</h5>
+                    <hr />
+                    <div class="col-lg-2">
+                        <h4>Basic info: </h4>
+                        <p><b>Created on:</b><br />2015.</p>
+                        <p><b>Technology:</b><br />HTML, CSS, ASP .NET MVC, Bootstrap</p>
+                        <p><b>Software:</b><br />Visual Studio, Adobe Photoshop</p>
+                        <p><b>Project:</b></p>
+                        <p>[Work In Progress]</p>
+                        <br />
+                    </div>
+
+                    <div class="col-lg-10">
+                        <h4>Details: </h4>
+                        <p>During the Software Startup Academy 2014. / 2015. I've joined "Easy Learn" team for Microsoft's Imagine Cup World Citizenship Competition 2015. as a Frontend developer and designer to fill an open position. This is a still work in progress so there isn't many information on implemented features or screenshots to showcase the finished work. </p>
+
+                        <div class="row">
+                            <h4>Screenshots: </h4>
+                            <div class="col-lg-3"><a class="lightbox-a" title="Logo design"><img src="./projects/images/EasyLearn_01.jpg" class="thumbnail img-responsive"></a></div>
+                            <div class="col-lg-3"><a class="lightbox-a" title="Home page (WIP)"><img src="./projects/images/EasyLearn_02.jpg" class="thumbnail img-responsive"></a></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+<div class="container-full container-gray">
+                <div class="row">
+                    <h2>CodeAdrian Website</h2>
+                    <h5>Website for my online portfolio</h5>
+                    <hr />
+                    <div class="col-lg-2">
+                        <h4>Basic info: </h4>
+                        <p><b>Created on:</b><br />2015.</p>
+                        <p><b>Technology:</b><br />HTML, CSS, Javascript, JQuery, Bootstrap</p>
+                        <p><b>Software:</b><br />Microsoft WebMatrix, Adobe Photoshop</p>
+                        <br />
+                    </div>
+
+                    <div class="col-lg-10">
+                        <h4>Details: </h4>
+                        <p>During 2015. I was planning to make my own online portolio of my programming, scientific and design work that I've done over the last few years. This website is also a showcase of my current Frontend and design knowledge, featuring a minimalistic design which focuses on the both general information on my work and details.</p>
                     </div>
                 </div>
             </div>
