--- a/index.html
+++ b/index.html
@@ -1,6 +1,18 @@
+<!--
+
+         ██████╗ ██████╗ ██████╗ ███████╗   █████╗ ██████╗ ██████╗ ██╗ █████╗ ███╗   ██╗
+        ██╔════╝██╔═══██╗██╔══██╗██╔════╝  ██╔══██╗██╔══██╗██╔══██╗██║██╔══██╗████╗  ██║
+        ██║     ██║   ██║██║  ██║█████╗    ███████║██║  ██║██████╔╝██║███████║██╔██╗ ██║
+        ██║     ██║   ██║██║  ██║██╔══╝    ██╔══██║██║  ██║██╔══██╗██║██╔══██║██║╚██╗██║
+        ╚██████╗╚██████╔╝██████╔╝███████╗  ██║  ██║██████╔╝██║  ██║██║██║  ██║██║ ╚████║
+         ╚═════╝ ╚═════╝ ╚═════╝ ╚══════╝  ╚═╝  ╚═╝╚═════╝ ╚═╝  ╚═╝╚═╝╚═╝  ╚═╝╚═╝  ╚═══╝
+                                   Adrian Bece, 2015.
+-->
 <!DOCTYPE html>
 <html lang="en">
     <head>
+               <title>Code Adrian - Adrian Bece's Online Portfolio</title>
+        <link rel="icon" href="./resources/images/ca_icon.png">
 
         <!-- Facebook meta info -->
         <meta property="og:title" content="Adrian Bece's Online Portfolio">
@@ -9,6 +21,7 @@
         <meta property="og:description" content="Adrian Bece's online portfolio and project showcase. Programming, design, science, robotics, computer vision and more.">
         <!-- Facebook meta info end -->
 
+        <!-- Default meta info-->
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta charset="utf-8">
         <meta name="robots" content="NOODP,NOYDIR">
@@ -18,25 +31,21 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Adrian Bece's portfolio - Codes and Designs. Programming languages: C, C++, C#, .NET, HTML, CSS, PHP, Javascript, JQuery, Bootstrap, Matlab, VHDL, Step7, Computer vision, Robotics, Wireframing, etc. Graphic designs and animations in Photoshop.">
         <meta name="author" content="Adrian Bece">
-        <link rel="icon" href="./resources/images/ca_icon.png">
-        <title>Code Adrian - Adrian Bece's Online Portfolio</title>
-        <!-- Bootstrap core CSS -->
+        <!-- Default meta info end-->
+
+        <!-- CSS and Javascript-->
         <link href="./bootstrap-3.3.2-dist/css/bootstrap.css" rel="stylesheet">
-        <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-        <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
         <script src="./index_files/ie-emulation-modes-warning.js"></script>
+        <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+        <script src="./bootstrap-3.3.2-dist/js/codeAdrianJS.js"></script>
+        <link href="./bootstrap-3.3.2-dist/css/carousel.css" rel="stylesheet">
         <style type="text/css"></style>
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-                    <!--[if lt IE 9]>
-                              <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-                              <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-                            <![endif]-->
-        <!-- Custom styles for this template -->
-        <link href="./bootstrap-3.3.2-dist/css/carousel.css" rel="stylesheet">
+        <!--[if lt IE 9]><script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script><script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
+        <!-- CSS and Javascript end -->
     </head>
-            <!-- NAVBAR
-                ================================================== -->
     <body>
+        <!-- NAV  -->
         <nav class="navbar navbar-inverse navbar-fixed-top">
             <div class="container">
                 <div class="navbar-header">
@@ -59,9 +68,9 @@
                 </div><!--/.nav-collapse -->
             </div>
         </nav>
+        <!-- NAV END  -->
 
-                    <!-- Carousel
-                            ================================================== -->
+        <!-- ------------ CONTENT ------------  -->
         <div class="jumbotron">
             <div class="container">
                 <h3>Adrian Bece</h3>
@@ -70,7 +79,7 @@
             </div>
         </div>
                     <!-- Marketing messaging and featurettes
-                            ================================================== -->
+                                        ================================================== -->
         <!-- Wrap the rest of the page in another container to center all the content. -->
         <div class="container marketing">
             <!-- Three columns of text below the carousel -->
@@ -136,7 +145,7 @@
             </footer>
         </div><!-- /.container -->
                     <!-- Bootstrap core JavaScript
-                            ================================================== -->
+                                        ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
         <script src="./index_files/jquery.min.js"></script>
         <script src="./index_files/bootstrap.min.js"></script>
