--- a/projects.html
+++ b/projects.html
@@ -1,3 +1,13 @@
+    <!--
+    
+             ██████╗ ██████╗ ██████╗ ███████╗   █████╗ ██████╗ ██████╗ ██╗ █████╗ ███╗   ██╗
+            ██╔════╝██╔═══██╗██╔══██╗██╔════╝  ██╔══██╗██╔══██╗██╔══██╗██║██╔══██╗████╗  ██║
+            ██║     ██║   ██║██║  ██║█████╗    ███████║██║  ██║██████╔╝██║███████║██╔██╗ ██║
+            ██║     ██║   ██║██║  ██║██╔══╝    ██╔══██║██║  ██║██╔══██╗██║██╔══██║██║╚██╗██║
+            ╚██████╗╚██████╔╝██████╔╝███████╗  ██║  ██║██████╔╝██║  ██║██║██║  ██║██║ ╚████║
+             ╚═════╝ ╚═════╝ ╚═════╝ ╚══════╝  ╚═╝  ╚═╝╚═════╝ ╚═╝  ╚═╝╚═╝╚═╝  ╚═╝╚═╝  ╚═══╝
+                                       Adrian Bece, 2015.
+    -->
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -8,6 +18,7 @@
         <meta property="og:site_name" content="Code Adrian">
         <meta property="og:description" content="Adrian Bece's online portfolio and project showcase. Programming, design, science, robotics, computer vision and more.">
         <!-- Facebook meta info end -->
+        <!-- Default meta info-->
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta charset="utf-8">
         <meta name="robots" content="NOODP,NOYDIR">
@@ -17,23 +28,22 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Adrian Bece's portfolio - Codes and Designs. Programming languages: C, C++, C#, .NET, HTML, CSS, PHP, Javascript, JQuery, Bootstrap, Matlab, VHDL, Step7, Computer vision, Robotics, Wireframing, etc. Graphic designs and animations in Photoshop.">
         <meta name="author" content="Adrian Bece">
-        <link rel="icon" href="./resources/images/ca_icon.png">
-        <title>Code Adrian - Adrian Bece's Online Portfolio</title>
+        <!-- Default meta info end-->
+        <!-- CSS and Javascript-->
         <link href="./bootstrap-3.3.2-dist/css/bootstrap.css" rel="stylesheet">
         <script src="./index_files/ie-emulation-modes-warning.js"></script>
         <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-
         <link href="./bootstrap-3.3.2-dist/css/lightbox.css" rel="stylesheet" media="screen">
         <script src="./bootstrap-3.3.2-dist/js/lightbox.js"></script>
-
         <style type="text/css"></style>
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!--[if lt IE 9]><script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script><script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
         <link href="./bootstrap-3.3.2-dist/css/carousel.css" rel="stylesheet">
+        <!-- CSS and Javascript end-->
     </head>
 
-    <!-- ---------- NAVBAR ----------  -->
     <body>
+        <!-- NAV  -->
         <nav class="navbar navbar-inverse navbar-fixed-top">
             <div class="container">
                 <div class="navbar-header">
@@ -56,7 +66,8 @@
                 </div><!--/.nav-collapse -->
             </div>
         </nav>
-        <!-- ------------- NAVBAR END ----------------  -->
+        <!-- NAV END  -->
+        <!-- ------------ CONTENT ------------  -->
         <div class="blurContainer">
             <div class="jumbotron noMargin jumbotron_skills">
                 <div class="container">
@@ -142,7 +153,6 @@
                     </div>
                 </div> <!-- container end -->
             </div> <!-- jumbotron end-->
-            
             <div class="container-full container-blue">
                 <div class="row">
                     <h2>Omnivision</h2>
@@ -173,7 +183,7 @@
             </div>
 
 
- <div class="container-full container-gray">
+            <div class="container-full container-gray">
                 <div class="row">
                     <h2>Hexagonal Melody - Drums</h2>
                     <h5>It's a Simon says game... but with drums!</h5>
@@ -202,7 +212,7 @@
                 </div>
             </div>
 
- <div class="container-full container-blue">
+            <div class="container-full container-blue">
                 <div class="row">
                     <h2>Image To ASCII</h2>
                     <h5>Simple image to ASCII art converter with text editing based on image editing</h5>
@@ -245,7 +255,7 @@
             </div>
 
 
- <div class="container-full container-gray">
+            <div class="container-full container-gray">
                 <div class="row">
                     <h2>Block Runner Rampage</h2>
                     <h5>Using buttons controller as makeshift graphics and "pixels"!</h5>
@@ -274,7 +284,7 @@
                 </div>
             </div>
 
- <div class="container-full container-blue">
+            <div class="container-full container-blue">
                 <div class="row">
                     <h2>Foodly Desktop Application</h2>
                     <h5>Project for Software Startup Academy 2014./2015.</h5>
@@ -304,7 +314,7 @@
             </div>
 
 
-<div class="container-full container-gray">
+            <div class="container-full container-gray">
                 <div class="row">
                     <h2>Foodly Website</h2>
                     <h5>Project for Software Startup Academy 2014./2015.</h5>
@@ -325,8 +335,8 @@
 
                         <div class="row">
                             <h4>Screenshots: </h4>
-                             <div class="col-lg-3"><a class="lightbox-a" title="Restaurant picker"><img src="./projects/images/FoodlyWeb_03.gif" class="thumbnail img-responsive"></a></div>
-                                                        <div class="col-lg-3"><a class="lightbox-a" title="Webshop"><img src="./projects/images/FoodlyWeb_02.gif" class="thumbnail img-responsive"></a></div>
+                            <div class="col-lg-3"><a class="lightbox-a" title="Restaurant picker"><img src="./projects/images/FoodlyWeb_03.gif" class="thumbnail img-responsive"></a></div>
+                            <div class="col-lg-3"><a class="lightbox-a" title="Webshop"><img src="./projects/images/FoodlyWeb_02.gif" class="thumbnail img-responsive"></a></div>
                             <div class="col-lg-3"><a class="lightbox-a" title="Pizza Customization"><img src="./projects/images/FoodlyWeb_01.gif" class="thumbnail img-responsive"></a></div>
                         </div>
                     </div>
@@ -334,7 +344,7 @@
             </div>
 
 
-<div class="container-full container-blue">
+            <div class="container-full container-blue">
                 <div class="row">
                     <h2>Easy Learn Website</h2>
                     <h5>Work in progress. Project for Microsoft's Imagine Cup 2015.</h5>
@@ -363,7 +373,7 @@
             </div>
 
 
-<div class="container-full container-gray">
+            <div class="container-full container-gray">
                 <div class="row">
                     <h2>CodeAdrian Website</h2>
                     <h5>Website for my online portfolio</h5>
@@ -383,7 +393,34 @@
                 </div>
             </div>
 
+            <div class="container-full container-blue">
+                <div class="row">
+                    <h2>Kernel-based Image filter</h2>
+                    <h5>Image filter implemented in Matlab.</h5>
+                    <hr />
+                    <div class="col-lg-2">
+                        <h4>Basic info: </h4>
+                        <p><b>Created on:</b><br />2015.</p>
+                        <p><b>Technology:</b><br />Matlab m-script</p>
+                        <p><b>Software:</b><br />Matlab</p>
+                        <p><b>Project:</b></p>
+                        <p><a class="btn btn-default" href="#" role="button">Github link »</a></p>
+                        <br />
+                    </div>
 
+                    <div class="col-lg-10">
+                        <h4>Details: </h4>
+                        <p>I am interested in image processing and computer vision. During the semester, I had a project to create a kernel-based image filter in Matlab that would filter an user-submitted image with a custom defined filter (kernel). Although Matlab is a great tool for systems modeling, signal processing and everything related to engineering, it's not really as profficient and fast for image filtering and processing. </p>
+
+                        <div class="row">
+                            <h4>Screenshots: </h4>
+                            <div class="col-lg-3"><a class="lightbox-a" title="Code"><img src="./projects/images/Kernel_01.JPG" class="thumbnail img-responsive"></a></div>
+                            <div class="col-lg-3"><a class="lightbox-a" title="Edge Detection Kernel"><img src="./projects/images/Kernel_02.JPG" class="thumbnail img-responsive"></a></div>
+                            <div class="col-lg-3"><a class="lightbox-a" title="Blur Kernel"><img src="./projects/images/Kernel_03.JPG" class="thumbnail img-responsive"></a></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
             <div class="container marketing">
                 <!-- /END THE FEATURETTES -->
