--- a/skills.html
+++ b/skills.html
@@ -1,14 +1,27 @@
+    <!--
+    
+             ██████╗ ██████╗ ██████╗ ███████╗   █████╗ ██████╗ ██████╗ ██╗ █████╗ ███╗   ██╗
+            ██╔════╝██╔═══██╗██╔══██╗██╔════╝  ██╔══██╗██╔══██╗██╔══██╗██║██╔══██╗████╗  ██║
+            ██║     ██║   ██║██║  ██║█████╗    ███████║██║  ██║██████╔╝██║███████║██╔██╗ ██║
+            ██║     ██║   ██║██║  ██║██╔══╝    ██╔══██║██║  ██║██╔══██╗██║██╔══██║██║╚██╗██║
+            ╚██████╗╚██████╔╝██████╔╝███████╗  ██║  ██║██████╔╝██║  ██║██║██║  ██║██║ ╚████║
+             ╚═════╝ ╚═════╝ ╚═════╝ ╚══════╝  ╚═╝  ╚═╝╚═════╝ ╚═╝  ╚═╝╚═╝╚═╝  ╚═╝╚═╝  ╚═══╝
+                                       Adrian Bece, 2015.
+    -->
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <title>Code Adrian - Adrian Bece's Online Portfolio</title>
+        <link rel="icon" href="./resources/images/ca_icon.png">
 
-                <!-- Facebook meta info -->
+        <!-- Facebook meta info -->
         <meta property="og:title" content="Adrian Bece's Online Portfolio">
         <meta property="og:image" content="http://codeadrian.github.io/resources/images/ca_fb_logo.jpg">
         <meta property="og:site_name" content="Code Adrian">
         <meta property="og:description" content="Adrian Bece's online portfolio and project showcase. Programming, design, science, robotics, computer vision and more.">
         <!-- Facebook meta info end -->
 
+        <!-- Default meta info-->
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta charset="utf-8">
         <meta name="robots" content="NOODP,NOYDIR">
@@ -18,20 +31,23 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Adrian Bece's portfolio - Codes and Designs. Programming languages: C, C++, C#, .NET, HTML, CSS, PHP, Javascript, JQuery, Bootstrap, Matlab, VHDL, Step7, Computer vision, Robotics, Wireframing, etc. Graphic designs and animations in Photoshop.">
         <meta name="author" content="Adrian Bece">
-        <link rel="icon" href="./resources/images/ca_icon.png">
-        <title>Code Adrian - Adrian Bece's Online Portfolio</title>
+        <!-- Default meta info end-->
+
+        <!-- CSS and Javascript-->
         <link href="./bootstrap-3.3.2-dist/css/bootstrap.css" rel="stylesheet">
         <script src="./index_files/ie-emulation-modes-warning.js"></script>
         <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
         <script src="./bootstrap-3.3.2-dist/js/codeAdrianJS.js"></script>
+        <link href="./bootstrap-3.3.2-dist/css/carousel.css" rel="stylesheet">
         <style type="text/css"></style>
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!--[if lt IE 9]><script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script><script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
-        <link href="./bootstrap-3.3.2-dist/css/carousel.css" rel="stylesheet">
+        <!-- CSS and Javascript end -->
+
     </head>
 
-    <!-- ---------- NAVBAR ----------  -->
     <body>
+        <!-- NAV  -->
         <nav class="navbar navbar-inverse navbar-fixed-top">
             <div class="container">
                 <div class="navbar-header">
@@ -54,8 +70,8 @@
                 </div><!--/.nav-collapse -->
             </div>
         </nav>
-
-        <!-- ------------- NAVBAR END ----------------  -->
+        <!-- NAV END  -->
+        <!-- ------------ CONTENT ------------  -->
         <div class="jumbotron noMargin jumbotron_skills">
             <div class="container">
                 <h3 class="centered">Skills Summary</h3>
@@ -275,6 +291,7 @@ Familiar
             </div>
         </div>
 
+        <!-- ------------ CONTENT - DESCRIPTION ------------  -->
         <div class="container-full container-blue" id="box_C_Cpp">
             <h2>C and C++</h2>
             <h5>Highly profficient / Expert</h5><hr>
@@ -571,14 +588,13 @@ Familiar
                     <p><a class="btn btn-default" href="#" role="button">Robotics and Computer Vision projects »</a><br /><br /></p>
                 </div>
             </div><!-- /.row -->
-
-                <div class="col-lg-4">
-                    <img class="img-circle" src="./resources/images/ca_circle_gaming.png" alt="SVN icon" style="width: 140px; height: 140px;">
-                    <h2>Game design and development</h2>
-                    <h5>Familiar</h5>
-                    <hr>
-                    <p class="skills-text"> I love playing PC games in my free time and I've became interested in the process of designing and making games. I am familiar with concept of game engines and working in some widely-used game engines: UDK (Unreal Engine), Unity Engine and Cryengine. <br /><br /></p>
-                </div>
+            <div class="col-lg-4">
+                <img class="img-circle" src="./resources/images/ca_circle_gaming.png" alt="SVN icon" style="width: 140px; height: 140px;">
+                <h2>Game design and development</h2>
+                <h5>Familiar</h5>
+                <hr>
+                <p class="skills-text"> I love playing PC games in my free time and I've became interested in the process of designing and making games. I am familiar with concept of game engines and working in some widely-used game engines: UDK (Unreal Engine), Unity Engine and Cryengine. <br /><br /></p>
+            </div>
 
             <div class="row">
                 <div class="col-lg-4">
@@ -598,15 +614,11 @@ Familiar
                 </div>
 
             </div><!-- /.row -->
-
-
         </div>
 
 
-
+        <!-- FOOTER -->
         <div class="container marketing">
-            <!-- /END THE FEATURETTES -->
-            <!-- FOOTER -->
             <footer>
                 <hr>
                 <p class="pull-right"><a href="#">Back to top</a></p>
@@ -614,8 +626,7 @@ Familiar
             </footer>
         </div>
         </div><!-- /.container -->
-                    <!-- Bootstrap core JavaScript
-                                                                                                                                                                                                                                                            ================================================== -->
+                                                                                                                                                                                                                                                                        ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
         <script src="./index_files/jquery.min.js"></script>
         <script src="./index_files/bootstrap.min.js"></script>
