--- a/skills.html
+++ b/skills.html
@@ -1,13 +1,13 @@
-    <!--
-    
-             ██████╗ ██████╗ ██████╗ ███████╗   █████╗ ██████╗ ██████╗ ██╗ █████╗ ███╗   ██╗
-            ██╔════╝██╔═══██╗██╔══██╗██╔════╝  ██╔══██╗██╔══██╗██╔══██╗██║██╔══██╗████╗  ██║
-            ██║     ██║   ██║██║  ██║█████╗    ███████║██║  ██║██████╔╝██║███████║██╔██╗ ██║
-            ██║     ██║   ██║██║  ██║██╔══╝    ██╔══██║██║  ██║██╔══██╗██║██╔══██║██║╚██╗██║
-            ╚██████╗╚██████╔╝██████╔╝███████╗  ██║  ██║██████╔╝██║  ██║██║██║  ██║██║ ╚████║
-             ╚═════╝ ╚═════╝ ╚═════╝ ╚══════╝  ╚═╝  ╚═╝╚═════╝ ╚═╝  ╚═╝╚═╝╚═╝  ╚═╝╚═╝  ╚═══╝
-                                       Adrian Bece, 2015.
-    -->
+<!--
+
+  ██████╗ ██████╗ ██████╗ ███████╗   █████╗ ██████╗ ██████╗ ██╗ █████╗ ███╗   ██╗
+ ██╔════╝██╔═══██╗██╔══██╗██╔════╝  ██╔══██╗██╔══██╗██╔══██╗██║██╔══██╗████╗  ██║
+ ██║     ██║   ██║██║  ██║█████╗    ███████║██║  ██║██████╔╝██║███████║██╔██╗ ██║
+ ██║     ██║   ██║██║  ██║██╔══╝    ██╔══██║██║  ██║██╔══██╗██║██╔══██║██║╚██╗██║
+ ╚██████╗╚██████╔╝██████╔╝███████╗  ██║  ██║██████╔╝██║  ██║██║██║  ██║██║ ╚████║
+  ╚═════╝ ╚═════╝ ╚═════╝ ╚══════╝  ╚═╝  ╚═╝╚═════╝ ╚═╝  ╚═╝╚═╝╚═╝  ╚═╝╚═╝  ╚═══╝
+                            Adrian Bece, 2015.
+-->
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -18,14 +18,14 @@
         <meta property="og:title" content="Adrian Bece's Online Portfolio">
         <meta property="og:image" content="http://codeadrian.github.io/resources/images/ca_fb_logo.jpg">
         <meta property="og:site_name" content="Code Adrian">
-        <meta property="og:description" content="Adrian Bece's online portfolio and project showcase. Programming, design, science, robotics, computer vision and more.">
+        <meta property="og:description" content="Adrian Bece's online portfolio and project showcase. Frontend development, Backend development, design, science, robotics, computer vision and more.">
         <!-- Facebook meta info end -->
 
         <!-- Default meta info-->
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta charset="utf-8">
         <meta name="robots" content="NOODP,NOYDIR">
-        <meta name="keywords" content="Adrian, Bece, HTML , CSS, C#, C++ , C, Cpp, Osijek, Job, Programmer, Frontend, Backend, Matlab, Robotics, Computer Vision">
+        <meta name="keywords" content="Adrian, Bece, HTML , CSS, C#, C++ , C, Cpp, Osijek, Job, Developer, Frontend, Backend, Matlab, Robotics, Computer Vision">
         <meta name="author" content="Adrian Bece">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -295,7 +295,7 @@ Familiar
         <div class="container-full container-blue" id="box_C_Cpp">
             <h2>C and C++</h2>
             <h5>Highly profficient / Expert</h5><hr>
-            <p>I am highly familiar with C / C++ programming language. I've been studying it since highschool. I've used it mostly during my education for writing code ranging from simple to moderately complex. Currently, I am writing a student handbook on programming in C / C++ and C# for Faculty Of Electric Engineering in Osijek.
+            <p>I am highly familiar with C / C++ programming language. I've been studying it since highschool. I've used it mostly during my education for writing code ranging from simple to moderately complex. Currently, I am writing a student handbook on developing in C / C++ and C# for Faculty Of Electric Engineering in Osijek.
             </p>
             <div class="row">
                 <div class="col-md-8">
@@ -626,7 +626,6 @@ Familiar
             </footer>
         </div>
         </div><!-- /.container -->
-                                                                                                                                                                                                                                                                        ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
         <script src="./index_files/jquery.min.js"></script>
         <script src="./index_files/bootstrap.min.js"></script>
